--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -4,7 +4,7 @@
     <string name="grow_together">Grow Together</string>
     <string name="let_s_get_started">Let\'s Get Started</string>
     <string name="login">LOGIN</string>
-    <string name="forgotten_passwoard">Forgotten Passwoard?</string>
+    <string name="forgotten_password">Forgotten Password?</string>
     <string name="or_create_a_new_account">Or Create a New Account</string>
     <string name="password">Password</string>
     <string name="username">Username</string>
